--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -41,7 +41,7 @@
   
   <div class="attribution">
     Challenge by <a class="link" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a class="link" href="#">Brandon Mayingi</a>.
+    Coded by <a class="link" href="https://github.com/MayBrandon/social-links-profile-main.git" target="_blank">Brandon Mayingi</a>.
   </div>
 </body>
 </html>
